test/Fail/AnonymousRecConstrUnknown.agda
module AnonymousRecConstrUnknown where

_ = Foo.constructor
